<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/data" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/moneyChange" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/AllMoney" />

    </LinearLayout>

    <com.gc.iphoneMaxPlan.view.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/mainButton"
        android:layout_below="@id/mainTitle"
        android:scrollbars="none">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/mainButton">

        </androidx.recyclerview.widget.RecyclerView>

    </com.gc.iphoneMaxPlan.view.ReboundScrollView>

    <LinearLayout
        android:id="@+id/mainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/AllMoneys"
        android:gravity="center">

        <Button
            android:id="@+id/eat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eat" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/noEat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/noEat" />

    </LinearLayout>

    <TextView
        android:id="@+id/AllMoneys"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textSize="20sp" />

</RelativeLayout>