<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/mainViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/line">

    </androidx.viewpager.widget.ViewPager>

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_above="@id/bottomButton"
        android:background="@color/colorSilver" />

    <LinearLayout
        android:id="@+id/bottomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:onClick="mainClick"
            android:text="@string/main"
            android:textColor="@color/colorSilver"
            android:textSize="15dp" />

        <Button
            android:id="@+id/rules"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:onClick="mainClick"
            android:text="@string/rules"
            android:textColor="@color/colorSilver"
            android:textSize="15dp" />

        <Button
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:onClick="mainClick"
            android:text="@string/about"
            android:textColor="@color/colorSilver"
            android:textSize="15dp" />
    </LinearLayout>

</RelativeLayout>